# DeepLearn

./: GPU.ipynb  LeNet.ipynb  RNN序列模型.ipynb  Softmax.ipynb  Untitled.ipynb  dropout.ipynb  pyproject.toml  submission.csv  加州房价预测.ipynb  文本预处理.ipynb  权重衰退.ipynb  梯度下降包.ipynb
.ipynb_checkpoints/: 权重衰退-checkpoint.ipynb  梯度下降公式手搓-checkpoint.ipynb
test/: 房价预测.py
